@startuml 02_charactor
!pragma layout smetana
skinparam classAttributeIconSize 0
skinparam backgroundColor #FAFBFF
skinparam class {
  BackgroundColor #EEF3FF
  BorderColor #3A5CC5
  HeaderBackgroundColor #84a0f6
  FontColor #FFFFFF
  ArrowColor #2255AA
  AttributeFontColor #222222
}
skinparam note {
  BackgroundColor #FFF9E6
  BorderColor #C8A800
}

title <b>Charactor Package – Inheritance Hierarchy</b>

abstract class BasePlayer {
  - maxHp : int
  - hp : int
  - sprite : Image
  - perfectAimReady : boolean
  + {abstract} ability() : void
  + {abstract} getName() : String
  + {abstract} getAbilityLabel() : String
  + {abstract} getSpritePath() : String
  + isPerfectAimReady() : boolean
  + resetAbilityEffect() : void
  + getHp() : int
  + getMaxHp() : int
  + setHp(h : int) : void
  + decreaseHp(damage : int) : void
  + getSprite() : Image
}

class DogPlayer {
  + ability() : void
  + getName() : String
  + getAbilityLabel() : String
  + getSpritePath() : String
}

class CatPlayer {
  - perfectAimReady : boolean
  + ability() : void
  + isPerfectAimReady() : boolean
  + resetAbilityEffect() : void
  + getName() : String
  + getAbilityLabel() : String
  + getSpritePath() : String
}

DogPlayer --|> BasePlayer : extends
CatPlayer --|> BasePlayer : extends

note right of DogPlayer
  <b>Ability: HEAL</b>
  hp = min(hp+1, maxHp)
  ends turn immediately
end note

note right of CatPlayer
  <b>Ability: AIM</b>
  Calculates perfect angle,
  cancels wind on self,
  locks angle for SPACE fire
end note

@enduml
